connect to mongodb

--- a/src/assets/styles/fastjobs_variables.scss
+++ b/src/assets/styles/fastjobs_variables.scss
@@ -26,6 +26,7 @@ $bc-border-box: #fcfcfc;
 
 
 /*==================FONT SIZE==================*/
+$fs-small: 12px;
 $fs-base: 14px;
 $fs-large-18: 18px;
 
