--- a/src/assets/styles/quick_classes.scss
+++ b/src/assets/styles/quick_classes.scss
@@ -30,9 +30,11 @@
 }
 
 .text_ellipsis {
-  white-space: nowrap!important;
-  overflow: hidden!important;
-  text-overflow: ellipsis!important;
+  display: inline-block;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /*============================JOB BOX=============================*/
